--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Legislators -- Italy -- Biography'
 - !lcc 'DG'
 - !lcsh 'Italy -- Politics and government -- 1849-1870 -- Anecdotes'
+- GITenberg
 title: I moribondi del Palazzo Carignano
 url: http://www.gutenberg.org/ebooks/19426
